--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>saurabhnath</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="./assets/icons/fav.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="style/mobile.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
@@ -13,6 +16,7 @@
 
 <body>
 
+    <div id="cursor"></div>
 
     <nav>
         <img src="./assets/icons/lo.png" alt="logo">
@@ -40,7 +44,7 @@
             <a class="github" href="https://github.com/saurabhnathofficial
             " target="_blank">Github</a>
         </div>
-        <i class="ri-menu-line"></i> <!-- for mobile layout -->
+        <i class="ri-menu-line" id="nav_btn"></i> <!-- for mobile layout -->
     </nav>
 
     <div id="main">
@@ -134,6 +138,7 @@
                 </div>
                 <div class="bottom_content">
                     <div class="btns">
+                       
                         <a href="https://github.com/saurabhnathofficial/Tala_Snacks" target="_blank">Work</a>
                         <a href="https://github.com/saurabhnathofficial/Tala_Snacks" target="_blank">Frontend</a>
                     </div>
@@ -225,7 +230,7 @@
 
 
                 <div class="saurabh">
-                    <img src="./assets/profile-pic (18).png" height="250px" alt="">
+                    <img src="./assets/profile-pic (18).png"  alt="">
                     <h1>Saurabh Nath</h1>
                 </div>
 
@@ -261,11 +266,18 @@
             </div>
 
         </div>
+
+        <!-- End of Footer  -->
+
     </div>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="https://kit.fontawesome.com/59b74c8d6d.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+    integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="script.js"></script>
 
 </body>
