--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="./assets/icons/fav.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <!-- <link rel="stylesheet" href="style/mobile.css"> -->
+    <link rel="stylesheet" href="style/mobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
