--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="./About/about.html">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1uwXz6mC6MK9GKYSz05gQsDdD92PLLSHN/view" target="_blank">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view?usp=sharing" target="_blank">Resume</a></li>
                 <li><a href="work.html">Work</a></li>
 
             </ul>
