--- a/About/about.html
+++ b/About/about.html
@@ -28,7 +28,7 @@
 <body>
 
     <!-- --------------unversel cursor--------------  -->
-    <!-- <div id="cursor"></div> -->
+    <div id="cursor"></div>
 
     <!-- ---------------custome click cursor-----------------  -->
     <div class="cursor">
@@ -51,7 +51,7 @@
 
                 <li><a href="../index.html">Home</a></li>
                 <li><a class="active" href="#">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1uwXz6mC6MK9GKYSz05gQsDdD92PLLSHN/view"
+                <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view"
                         target="_blank">Resume</a></li>
                 <li><a href=" ../work.html">Work</a></li>
 
