contact page done

--- a/About/about.html
+++ b/About/about.html
@@ -7,7 +7,7 @@
 
     <title>saurabhnath</title>
 
-    <link rel="shortcut icon" href="../assetS/icons/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/fav.png" type="image/x-icon">
     <!-- main css  -->
     <link rel="stylesheet" href="..//style.css">
     <!-- mobile css  -->
@@ -53,22 +53,21 @@
                 <li><a class="active" href="#">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view"
                         target="_blank">Resume</a></li>
-                <li><a href=" ../work.html">Work</a></li>
+                <li><a class="github" href="../contact/contact.html" target="_blank">Contact</a></li>
+
 
             </ul>
             <div class="mobile_social">
 
 
                 <a class="linkedin" href="https://www.linkedin.com/in/saurabhnathofficial" target="_blank"><img
-                        src="./assets/icons/linkedin.png" alt="linkedin"></a>
+                        src="../assets/icons/linkedin.png" alt="linkedin"></a>
                 <a class="github" href="https://github.com/saurabhnathofficial
-            " target="_blank"><img src="./assets/icons/git.png" alt="github"></a>
+            " target="_blank"><img src="../assets/icons/git.png" alt="github"></a>
             </div>
         </div>
         <div class="social_link">
             <a class="linkedin" href="https://www.linkedin.com/in/saurabhnathofficial" target="_blank">Linkedin</a>
-            <a class="github" href="https://github.com/saurabhnathofficial
-            " target="_blank">Github</a>
         </div>
         <i class="ri-menu-line" id="nav_btn"></i> <!-- for mobile layout -->
     </nav>
