--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="./About/about.html">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view?usp=sharing" target="_blank">Resume</a></li>
-                <li><a href="work.html">Work</a></li>
-
+                <li><a class="github" href="./contact/contact.html" target="_blank">Contact</a></li>
             </ul>
             <div class="mobile_social">
 
@@ -60,8 +59,6 @@
         </div>
         <div class="social_link">
             <a class="linkedin" href="https://www.linkedin.com/in/saurabhnathofficial" target="_blank">Linkedin</a>
-            <a class="github" href="https://github.com/saurabhnathofficial
-            " target="_blank">Github</a>
         </div>
         <i class="ri-menu-line" id="nav_btn"></i> <!-- for mobile layout -->
     </nav>
