--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="./About/about.html">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view?usp=sharing" target="_blank">Resume</a></li>
-                <li><a class="github" href="./contact/contact.html" target="_blank">Contact</a></li>
+                <li><a class="github" href="./contact/contact.html">Contact</a></li>
             </ul>
             <div class="mobile_social">
 
@@ -253,7 +253,7 @@
 
 
                 <div class="saurabh">
-                    <img src="./assets/profile-pic (18).png" alt="">
+                    <img src="./assets/images/profile.png" alt="">
                     <h1>Saurabh Nath</h1>
                 </div>
 
