--- a/About/about.html
+++ b/About/about.html
@@ -53,7 +53,7 @@
                 <li><a class="active" href="#">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view"
                         target="_blank">Resume</a></li>
-                <li><a class="github" href="../contact/contact.html" target="_blank">Contact</a></li>
+                <li><a class="github" href="../contact/contact.html">Contact</a></li>
 
 
             </ul>
@@ -346,7 +346,7 @@
 
 
                     <div class="saurabh">
-                        <img src="../assets/profile-pic (18).png" alt="">
+                        <img src="../assets/images/profile.png" alt="">
                         <h1>Saurabh Nath</h1>
                     </div>
 
