--- a/index.html
+++ b/index.html
@@ -222,6 +222,27 @@
             <div class="project_card">
 
                 <div class="banner">
+                    <img src="./assets/thumbnells/ecom.png" alt="">
+                </div>
+                <div class="bottom_content">
+                    <div class="btns">
+                        <a href="https://github.com/saurabhnathofficial/PoochCare" target="_blank">Work</a>
+                        <a href="https://github.com/saurabhnathofficial/PoochCare" target="_blank">Frontend</a>
+                    </div>
+
+                    <h1>Pooch Care <span>(Pets Care)</span></h1>
+                    <h2>Dedicated website for pet <span>grooming</span>, <span>training</span>, and <span>health
+                            care</span> services.</h2>
+
+                    <a href="https://saurabhnathofficial.github.io/PoochCare/" target="_blank">Explore <img
+                            src="assets/arrow.svg" class="arrow" alt="loding.." srcset=""></a>
+                </div>
+
+            </div>
+
+            <div class="project_card">
+
+                <div class="banner">
                     <img src="./assets/thumbnells/poochcare.jpg" alt="">
                 </div>
                 <div class="bottom_content">
