--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
                 </div>
                 <div class="bottom_content">
                     <div class="btns">
-                        <a href="https://github.com/saurabhnathofficial/PoochCare" target="_blank">Work</a>
-                        <a href="https://github.com/saurabhnathofficial/PoochCare" target="_blank">Frontend</a>
+                        <a href="https://github.com/saurabhnathofficial/ecommerce" target="_blank">Work</a>
+                        <a href="https://github.com/saurabhnathofficial/ecommerce" target="_blank">Frontend</a>
                     </div>
 
-                    <h1>Pooch Care <span>(Pets Care)</span></h1>
-                    <h2>Dedicated website for pet <span>grooming</span>, <span>training</span>, and <span>health
-                            care</span> services.</h2>
+                    <h1>Shivee Collaction<span>(Ecommerce)</span></h1>
+                    <h2>Discover a world of quality products <span>unbeatable deals</span>, and <span>effortless shopping
+                            </span> services.</h2>
 
-                    <a href="https://saurabhnathofficial.github.io/PoochCare/" target="_blank">Explore <img
+                    <a href="https://saurabhnathofficial.github.io/ecommerce/" target="_blank">Explore <img
                             src="assets/arrow.svg" class="arrow" alt="loding.." srcset=""></a>
                 </div>
 
