--- a/About/about.html
+++ b/About/about.html
@@ -162,10 +162,10 @@
                         <img src="assets/js.png" alt="JavaScript">
                         <p>JavaScript</p>
                     </div>
-                    <div class="skill-card">
+                    <!-- <div class="skill-card">
                         <img src="assets/react.png" alt="React.js">
                         <p>React.js</p>
-                    </div>
+                    </div> -->
                     <div class="skill-card">
                         <img src="assets/sql.png" alt="SQL">
                         <p>SQL</p>
@@ -174,14 +174,14 @@
                         <img src="assets/git.png" alt="Git/GitHub">
                         <p>Git/GitHub</p>
                     </div>
-                    <div class="skill-card">
+                    <!-- <div class="skill-card">
                         <img src="assets/tailwind-css.png" alt="Tailwind">
                         <p>Tailwind</p>
-                    </div>
-                    <div class="skill-card">
+                    </div> -->
+                    <!-- <div class="skill-card">
                         <img src="assets/bootstrap.png" alt="Bootstrap">
                         <p>Bootstrap</p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Concepts Section -->
