--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="./About/about.html">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1Us01bEAThRu3NkCONJXah0I7bh8aM0Ud/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1BGclyVxvRamgkEddHYZYiur7k-4AIPFW/view?usp=sharing"
+                        target="_blank">Resume</a></li>
                 <li><a class="github" href="./contact/contact.html">Contact</a></li>
             </ul>
             <div class="mobile_social">
@@ -121,7 +122,7 @@
                         awesome.</span>
                 </div>
                 <!-- End of Content tagline -->
-                 
+
 
             </div>
 
@@ -231,8 +232,9 @@
                     </div>
 
                     <h1>Shivee Collaction<span>(Ecommerce)</span></h1>
-                    <h2>Discover a world of quality products <span>unbeatable deals</span>, and <span>effortless shopping
-                            </span> services.</h2>
+                    <h2>Discover a world of quality products <span>unbeatable deals</span>, and <span>effortless
+                            shopping
+                        </span> services.</h2>
 
                     <a href="https://saurabhnathofficial.github.io/ecommerce/" target="_blank">Explore <img
                             src="assets/arrow.svg" class="arrow" alt="loding.." srcset=""></a>
@@ -314,7 +316,7 @@
 
         <!-- End of Main Page  -->
     </div>
-     <!-- End of Main Page  -->
+    <!-- End of Main Page  -->
 
     <!-- gsap script  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
